Fixed the scroll top player being visible when not on a video page (the 1px element). Set the annotations to be enabled by default.

--- a/src/.styles/ytcenter-styles-player.css
+++ b/src/.styles/ytcenter-styles-player.css
@@ -34,6 +34,10 @@
 }
 
 .ytcenter-scrolled-top-element {
+  display: none;
+}
+
+.ytcenter-site-watch .ytcenter-scrolled-top-element {
   width: 100%;
   height: 100%;
   max-height: 1px;
@@ -44,6 +48,8 @@
   -webkit-transition: max-height 0.5s;
   -o-transition: max-height 0.5s;
   transition: max-height 0.5s;
+  
+  display: block;
 }
 
 .ytcenter-scrolled-top .ytcenter-scrolled-top-element {
